Mon Nov  8 14:40:06 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/tests/MultiTopic:
        * connectors/dds4ccm/tests/MultiTopic/Sender:
        * connectors/dds4ccm/tests/MultiTopic/Sender/MultiTopic_Sender.idl:
        * connectors/dds4ccm/tests/MultiTopic/Sender/MultiTopic_Sender_exec.h:
        * connectors/dds4ccm/tests/MultiTopic/Sender/MultiTopic_Sender.mpc:
        * connectors/dds4ccm/tests/MultiTopic/Sender/MultiTopic_Sender_exec.cpp:
        * connectors/dds4ccm/tests/MultiTopic/descriptors:
        * connectors/dds4ccm/tests/MultiTopic/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/MultiTopic/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/MultiTopic/Receiver:
        * connectors/dds4ccm/tests/MultiTopic/Receiver/MultiTopic_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/MultiTopic/Receiver/MultiTopic_Receiver.idl:
        * connectors/dds4ccm/tests/MultiTopic/Receiver/MultiTopic_Receiver_exec.h:
        * connectors/dds4ccm/tests/MultiTopic/Receiver/MultiTopic_Receiver.mpc:
        * connectors/dds4ccm/tests/MultiTopic/Connector:
        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector.mpc:
        * connectors/dds4ccm/tests/MultiTopic/Connector/ccm_dds_mt.idl:
        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector.idl:
        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.h:
        * connectors/dds4ccm/tests/MultiTopic/Base:
        * connectors/dds4ccm/tests/MultiTopic/Base/MultiTopic_Base.mpc:
        * connectors/dds4ccm/tests/MultiTopic/Base/MultiTopic_Base.idl:
        First frame for Multi Topic test.

Fri Nov  5 19:09:06 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * ciao/Containers/Session/Session_Container.cpp:
          Fixed some incorrect logging messages.

Fri Nov  5 15:42:06 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/Getter_T.cpp: