@@ -1,3 +1,14 @@
+Mon Nov  8 16:11:06 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
+
+        * connectors/dds4ccm/tests/MultiTopic/Sender/MultiTopic_Sender_exec.cpp:
+        * connectors/dds4ccm/tests/MultiTopic/descriptors/Plan.cdp:
+        * connectors/dds4ccm/tests/MultiTopic/Receiver/MultiTopic_Receiver_exec.cpp:
+        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector.mpc:
+        * connectors/dds4ccm/tests/MultiTopic/Base/MultiTopic_Base.idl:
+        * connectors/ami4ccm/tests/AsynchT/Sender/AsynchT_Sender_exec.h:
+        * connectors/ami4ccm/tests/AsynchT/Sender/AsynchT_Sender_exec.cpp:
+        Fuzz errors.
+
 Mon Nov  8 14:40:06 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
 
         * connectors/dds4ccm/tests/MultiTopic:
